--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
 PORT=8080
 
-DATABASE_URL=mongodb://localhost:27017/User-Management
+DATABASE_URL = mongodb+srv://mongodb6200:Prakash970@mongodb.wmggpf1.mongodb.net/
 
 JWT_AUTH_TOKEN = jpkdlrwvtlotbfhscvjhvesgrdtjjrbfcvjebcivknjskbcdjdencef
 
+PAY_ONY_APIKEY = iQPzJ9eJkI62oxJw0KdEhQ4ktcACjgMygwW
+
+MROBOTICS_APIKEY = 2fbd3157-f29c-4615-bc3f-c28c8d4d3d78
+
+RECHARGE_EXCHANGE_TOKEN = iAYu0Ux9B45pMfFTIQFd
