PayOne Bill info

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ DATABASE_URL = mongodb+srv://mongodb6200:Prakash970@mongodb.wmggpf1.mongodb.net/
 JWT_AUTH_TOKEN = jpkdlrwvtlotbfhscvjhvesgrdtjjrbfcvjebcivknjskbcdjdencef
 
 PAY_ONY_APIKEY = iQPzJ9eJkI62oxJw0KdEhQ4ktcACjgMygwW
+PAY_ONE_REG_MOBILE = 7029320529
 
 MROBOTICS_APIKEY = 2fbd3157-f29c-4615-bc3f-c28c8d4d3d78
 
