--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ PAY_ONE_REG_MOBILE = 7029320529
 MROBOTICS_APIKEY = 2fbd3157-f29c-4615-bc3f-c28c8d4d3d78
 
 RECHARGE_EXCHANGE_TOKEN = iAYu0Ux9B45pMfFTIQFd
+RECHARGE_EXCHANGE_USERID = 10769
