--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 PORT = 8080
 
-DATABASE_URL = mongodb+srv://mongodb6200:Prakash970@mongodb.wmggpf1.mongodb.net/
+#DATABASE_URL = mongodb+srv://mongodb6200:Prakash970@mongodb.wmggpf1.mongodb.net/
+DATABASE_URL = mongodb://127.0.0.1:27017/User-Management
 
 JWT_AUTH_TOKEN = jpkdlrwvtlotbfhscvjhvesgrdtjjrbfcvjebcivknjskbcdjdencef
 
