--- a/.env
+++ b/.env
@@ -13,3 +13,7 @@ MROBOTICS_APIKEY = 2fbd3157-f29c-4615-bc3f-c28c8d4d3d78
 
 RECHARGE_EXCHANGE_TOKEN = iAYu0Ux9B45pMfFTIQFd
 RECHARGE_EXCHANGE_USERID = 10769
+
+SUPERMERCHANT_LOGIN_ID = 'risingpayd'
+SUPERMERCHANT_PASSWORD = '1234d'
+SUPERMERCHANT_PASSWORD_MD5 = '664d77ef307311c0e1e0f491a5551c29'
