--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Prakash kumar",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.337.0",
     "@mongoosejs/double": "^0.3.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
