--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT = 8080
 
-#DATABASE_URL = mongodb+srv://mongodb6200:Prakash970@mongodb.wmggpf1.mongodb.net/
-DATABASE_URL = mongodb://127.0.0.1:27017/User-Management
-#DATABASE_URL = mongodb://admin:admin123@54.227.60.26:27017/?authMechanism=DEFAULT&authSource=admin./User-Management
+# DATABASE_URL = mongodb+srv://mongodb6200:Prakash970@mongodb.wmggpf1.mongodb.net/
+# DATABASE_URL = mongodb://127.0.0.1:27017/User-Management
+DATABASE_URL = mongodb://89.116.179.175:27017/
 
 JWT_AUTH_TOKEN = jpkdlrwvtlotbfhscvjhvesgrdtjjrbfcvjebcivknjskbcdjdencef
 
