--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.5.4",
-    "mongoose-paginate-v2": "^1.7.1"
+    "mongoose-paginate-v2": "^1.7.1",
+    "nodemailer": "^6.9.3"
   }
 }
