--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT = 8080
 SALT_ROUND = 10
 # DATABASE_URL = mongodb+srv://mongodb6200:Prakash970@mongodb.wmggpf1.mongodb.net/
-DATABASE_URL = mongodb://127.0.0.1:27017/User-Management
-#DATABASE_URL = mongodb://retailapp:Pr%25%5E%26.029l*k@89.116.179.175:27017/?authMechanism=DEFAULT&authSource=admin
+# DATABASE_URL = mongodb://127.0.0.1:27017/User-Management
+DATABASE_URL = mongodb://retailapp:Pr%25%5E%26.029l*k@89.116.179.175:27017/?authMechanism=DEFAULT&authSource=admin
 
 JWT_AUTH_TOKEN = jpkdlrwvtlotbfhscvjhvesgrdtjjrbfcvjebcivknjskbcdjdencef
 
